--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
+    "hbs": "^4.1.2",
     "puppeteer": "^10.0.0"
   }
 }
