finalized front end part and completed the project

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 node_modules
+webpage.pdf
+touristSpots.json
+trainsData.json
+hotelData.json
+/utilities/emailData.json
+/utilities/date.json
+/utilities/placeNames.json
