--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.1",
     "express": "^4.17.1",
     "hbs": "^4.1.2",
+    "nodemailer": "^6.6.2",
+    "prompt-sync": "^4.2.0",
     "puppeteer": "^10.0.0"
   }
 }
